--- a/style.css
+++ b/style.css
@@ -16,6 +16,18 @@ nav {
   justify-content: space-between;
   padding: 45px 8% 0 8%;
 }
+nav ul li {
+  display: inline-block;
+  padding: 10px 25px;
+}
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+nav ul li a:hover {
+  color: lightseagreen;
+}
 
 .logo {
   color: white;
