--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,18 @@ nav{
     align-items:center;
     justify-content: space-between;
     padding:45px 8% 0 8%;
+    & ul li{
+        display:inline-block;
+        padding:10px 25px;
+        & a{
+            color:white;
+            text-decoration: none;
+            transition:all 0.3s;
+            &:hover{
+                color:lightseagreen;
+            }
+        }
+    }
 }
 
 .logo{
