--- a/style.css
+++ b/style.css
@@ -37,4 +37,17 @@ nav ul li a:hover {
 }
 .logo span {
   color: lightseagreen;
+}
+
+.btn {
+  background-color: lightseagreen;
+  color: white;
+  padding: 10px 25px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.3s;
+}
+.btn:hover {
+  transform: scale(1.2);
+  border-radius: 20px;
 }/*# sourceMappingURL=style.css.map */
