--- a/style.scss
+++ b/style.scss
@@ -38,3 +38,16 @@ nav{
         color:lightseagreen;
     }
 }
+
+.btn{
+    background-color:lightseagreen;
+    color:white;
+    padding:10px 25px;
+    text-decoration: none;
+    font-weight:bold;
+    transition:all 0.3s;
+    &:hover{
+        transform:scale(1.2);
+        border-radius:20px;
+    }
+}
