--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+$textColor:#fff;
+$textColorPatial:rgb(225, 54, 15);
+
+
 *{
     margin:0;
     padding:0;
@@ -19,7 +23,7 @@ nav{
         display:inline-block;
         padding:10px 25px;
         & a{
-            color:white;
+            color:$textColor;
             text-decoration: none;
             transition:all 0.3s;
             &:hover{
@@ -30,18 +34,18 @@ nav{
 }
 
 .logo{
-    color:white;
+    color:$textColor;
     font-size:35px;
     letter-spacing:1px;
     cursor:pointer;
     & span{
-        color:lightseagreen;
+        color:$textColorPatial;
     }
 }
 
 .btn{
     background-color:lightseagreen;
-    color:white;
+    color:$textColor;
     padding:10px 25px;
     text-decoration: none;
     font-weight:bold;
@@ -59,5 +63,26 @@ nav{
         justify-content: space-evenly;
         padding-right:50px;
         padding-left:270px;
+    }
+}
+
+.portfolioInfo{
+    & h1{
+        color:$textColor;
+        margin:20px 0 20px;
+        font-size:50px;
+        & span{
+            color:$textColorPatial
+        }
+    }
+    & h3{
+        color:$textColor;
+        font-size:20px;
+        margin-bottom:50px;
+    }
+    & h4{
+        color:$textColor;
+        letter-spacing: 2px;
+        font-size:20px;
     }
 }
