--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 $textColor:#fff;
 $textColorPatial:rgb(225, 54, 15);
+$backgroundColor:#101010;
 
 
 *{
@@ -11,7 +12,7 @@ $textColorPatial:rgb(225, 54, 15);
 .hero{
     height:100vh;
     width:100%;
-    background-color: #101010;
+    background-color:$backgroundColor;
 }
 
 nav{
@@ -63,6 +64,11 @@ nav{
         justify-content: space-evenly;
         padding-right:50px;
         padding-left:270px;
+        & img{
+            width:800px;
+            height:auto;
+            margin-top:-150px;
+        }
     }
 }
 
@@ -72,7 +78,7 @@ nav{
         margin:20px 0 20px;
         font-size:50px;
         & span{
-            color:$textColorPatial
+            color:$textColorPatial;
         }
     }
     & h3{
@@ -108,5 +114,56 @@ nav{
             cursor:pointer;
             box-shadow: 1px 1px 2px rgba(0,0,0);
         }
+    }
+}
+
+.about{
+    width:100%;
+    padding:100px 0;
+    background-color: #191919;
+    color:$textColor;
+    & .main{
+        width:1130px;
+        display:flex;
+        margin: 0 auto;
+        align-items: center;
+        justify-content: space-around;
+        
+    }
+    & img{
+        width:204px;
+        height:306px;
+    }
+    & button{
+        background-color: lightseagreen;
+        padding: 13px 30px;
+        font-weight: bold;
+        border-radius: 30px;
+        color:$textColor;
+
+        transition:all 0.3s;
+        &:hover{
+            background-color: transparent;
+            cursor:pointer;
+            border:2px solid green;
+        }
+    }
+}
+
+.about-text{
+    width:550px;
+    letter-spacing: 1px;
+    & h2{
+        font-size:75px;
+        margin-bottom:20px;
+    }
+    & h5{
+        font-size:22px;
+        margin-bottom:25px;
+    }
+    & p{
+        font-size:15px;
+        line-height: 28px;
+        margin-bottom:45px;
     }
 }
