--- a/style.scss
+++ b/style.scss
@@ -223,8 +223,36 @@ nav{
                 background-color: transparent;
                 cursor:pointer;
                 border:2px solid green;
-            }
-    
+            }    
+        }
+    }
+}
+
+.contact{
+    width:100%;
+    height:290px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #191919;
+    & p{
+        color: white;
+        font-size:30px;
+        font-weight:bold;
+        margin-bottom:25px;
+    }
+    & .contact-button{
+        background-color: lightseagreen;
+        padding: 13px 30px;
+        font-weight: bold;
+        border-radius: 30px;
+        color:$textColor;
+        transition:all 0.3s;
+        &:hover{
+            background-color: transparent;
+            cursor:pointer;
+            border:2px solid green;
         }
     }
 }
