--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ nav ul li a:hover {
   border-radius: 30px;
   color: #fff;
   transition: all 0.3s;
+  text-decoration: none;
 }
 .portfolio .card .button:hover {
   background-color: transparent;
@@ -237,9 +238,63 @@ nav ul li a:hover {
   border-radius: 30px;
   color: #fff;
   transition: all 0.3s;
+  text-decoration: none;
 }
 .contact .contact-button:hover {
   background-color: transparent;
   cursor: pointer;
   border: 2px solid green;
+}
+
+footer {
+  width: 100%;
+  height: 400px;
+  background-color: #101010;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+footer p:nth-child(1) {
+  font-size: 30px;
+  color: white;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+footer p:nth-child(2) {
+  font-size: 15px;
+  width: 500px;
+  color: white;
+  margin-bottom: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+footer .end {
+  font-size: 12px;
+}
+
+.social {
+  display: flex;
+}
+.social a {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: lightseagreen;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  margin: 22px 10px;
+  color: white;
+  transition: all 0.3s;
+}
+.social a:hover {
+  transform: scale(1.3);
+}
+
+.end {
+  font-size: 16px;
+  color: white;
+  margin-top: 20px;
 }/*# sourceMappingURL=style.css.map */
