--- a/style.scss
+++ b/style.scss
@@ -219,6 +219,7 @@ nav{
             border-radius: 30px;
             color:$textColor;
             transition:all 0.3s;
+            text-decoration: none;
             &:hover{
                 background-color: transparent;
                 cursor:pointer;
@@ -249,10 +250,63 @@ nav{
         border-radius: 30px;
         color:$textColor;
         transition:all 0.3s;
+        text-decoration: none;
         &:hover{
             background-color: transparent;
             cursor:pointer;
             border:2px solid green;
         }
     }
+}
+footer{
+    width:100%;
+    height:400px;
+    background-color: #101010;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    & p{
+        &:nth-child(1){
+            font-size: 30px;
+            color:white;
+            margin-bottom:20px;
+            font-weight:bold;
+        }
+        &:nth-child(2){
+            font-size:15px;
+            width:500px;
+            color:white;
+            margin-bottom:20px;
+            font-weight:bold;
+            text-align: center;
+        }
+    }
+    & .end{
+        font-size:12px;
+    }
+}
+.social{
+    display:flex;
+    & a{
+        width:45px;
+        height:45px;
+        border-radius: 50%;
+        background-color: lightseagreen;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        margin:22px 10px;
+        color:white;
+        transition:all 0.3s;
+        &:hover{
+            transform:scale(1.3);
+        }
+    }
+}
+.end{
+    font-size:16px;
+    color:white;
+    margin-top:20px;
 }
